# webterm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/common/: Cargo.toml
crates/common/src/: config.rs  hub_client.rs  lib.rs  mqtt_notifier.rs  session.rs  utils.rs
crates/hub/: Cargo.toml  README.md
crates/hub/src/: main.rs
crates/hub/static/: index.html
crates/webterm/: Cargo.toml  README.md
crates/webterm/src/: main.rs  webterm.rs
webterm_client/: README.md  TROUBLESHOOTING.md  build.bat  build.py  debug.bat  diagnose.bat  fix_apk.py  install.bat  logs.bat  screenshot.bat  setEnv.bat
webterm_client/app/src/main/: AndroidManifest.xml
webterm_client/app/src/main/java/com/example/hello/: MainActivity.java  MqttManager.java  MqttService.java  ServerListActivity.java  WebTermListActivity.java
webterm_client/app/src/main/res/layout/: activity_server_list.xml  activity_webterm_list.xml  item_server.xml  item_webterm.xml
webterm_client/app/src/main/resources/org/eclipse/paho/client/mqttv3/internal/nls/: logcat.properties
